--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     
-    <button id = "ResizeButton" onclick="Resize(e)">Resize</button>
-    <button id = "MoveButton" onclick="Move(e)">Move</button>
+    <button id = "ResizeButton" onclick="Resize(e)">Resize Image</button>
+    <button id = "MoveButton" onclick="Move(e)">Move Image</button>
+    <button id = "MoveText" onclick="MoveText(e)">Move Text</button>
+    <button id = "ResizeText" onclick="ResizeText(e)">Resize Text</button>
     <script src="index.js"></script>
 </body>
 </html>
